[package]
name = "ternary-inference-sim"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Simulated ternary neural network inference. Ternary weight packing, batch inference, conservation verification."
repository = "https://github.com/SuperInstance/ternary-inference-sim"
